--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -8,9 +8,11 @@
     "block.tutorialmod.raw_sapphire_block": "Block of Raw Sapphire",
 
     "block.tutorialmod.sapphire_ore": "Sapphire Ore",
-    "block.tutorialmod.deepslate_sapphire_ore": "Deepslate Sapphire ore",
-    "block.tutorialmod.nether_sapphire_ore": "Nether Sapphire ore",
-    "block.tutorialmod.end_stone_sapphire_ore": "Endstone Sapphire ore",
+    "block.tutorialmod.deepslate_sapphire_ore": "Deepslate Sapphire Ore",
+    "block.tutorialmod.nether_sapphire_ore": "Nether Sapphire Ore",
+    "block.tutorialmod.end_stone_sapphire_ore": "Endstone Sapphire Ore",
+    
+    "block.tutorialmod.sound_block": "Sound Block",
 
     "creativetab.tutorial_tab": "Sapphire Tutorial Tab"
 }
