--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -6,6 +6,10 @@
 
     "item.tutorialmod.strawberry": "Strawberry",
 
+    "item.tutorialmod.low_quality_minor_vitality_pill": "Minor Vitality Pill (Low Quality)",
+    "item.tutorialmod.mid_quality_minor_vitality_pill": "Minor Vitality Pill (Mid Quality)",
+    "item.tutorialmod.high_quality_minor_vitality_pill": "Minor Vitality Pill (High Quality)",
+
     "block.tutorialmod.sapphire_block": "Sapphire Block",
     "block.tutorialmod.raw_sapphire_block": "Block of Raw Sapphire",
 
