--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -3,6 +3,7 @@
     "item.tutorialmod.raw_sapphire": "Raw Sapphire",
 
     "item.tutorialmod.metal_detector": "Metal Detector",
+    "tooltip.tutorialmod.metal_detector.tooltip": "Finds Valuable Ores",
 
     "item.tutorialmod.strawberry": "Strawberry",
 
