--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -15,6 +15,8 @@
     "block.tutorialmod.sapphire_door": "Sapphire Door",
     "block.tutorialmod.sapphire_trapdoor": "Sapphire Trapdoor",
 
+    "item.tutorialmod.sapphire_staff": "Sapphire Staff",
+
     "item.tutorialmod.strawberry": "Strawberry",
 
     "item.tutorialmod.pine_cone": "Pine Cone",
